fix: img align abstopright

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -479,7 +479,7 @@
     }
     &.align-abstopright {
       position: absolute;
-      top: -90px;
+      top: -80px;
       right: 1rem;
     }
   }
